Remove workaround for Jakarta Transformer and JDK>17
Closes #24862

Signed-off-by: Martin Bartoš <mabartos@redhat.com>